raylib/raylib.odin


CharInfo :: struct #packed {
    value : _c.int,
    rec : Rectangle,
    offset_x : _c.int,
    offset_y : _c.int,
    advance_x : _c.int,
    data : ^_c.uchar,
};

Font :: struct #packed {
    texture : Texture2D,
    base_size : _c.int,
    chars_count : _c.int,
    chars : ^CharInfo,
};

Camera3D :: struct #packed {
    position : Vector3,
    target : Vector3,
    up : Vector3,
    fovy : _c.float,
    type : _c.int,
};

Camera2D :: struct #packed {
    offset : Vector2,
    target : Vector2,
    rotation : _c.float,
    zoom : _c.float,
};

BoundingBox :: struct #packed {
    min : Vector3,
    max : Vector3,
};

Mesh :: struct #packed {
    vertex_count : _c.int,
    triangle_count : _c.int,
    vertices : ^_c.float,
    texcoords : ^_c.float,
    texcoords2 : ^_c.float,
    normals : ^_c.float,
    tangents : ^_c.float,
    colors : ^_c.uchar,
    indices : ^_c.ushort,
    base_vertices : ^_c.float,
    base_normals : ^_c.float,
    weight_bias : ^_c.float,
    weight_id : ^_c.int,
    vao_id : _c.uint,
    vbo_id : [7]_c.uint,
};

Shader :: struct #packed {
    id : _c.uint,
    locs : [32]_c.int,
};

MaterialMap :: struct #packed {
    texture : Texture2D,
    color : Color,
    value : _c.float,
};

Material :: struct #packed {
    shader : Shader,
    maps : [12]MaterialMap,
    params : ^_c.float,
};

Model :: struct #packed {
    mesh : Mesh,
    transform : Matrix,
    material : Material,
};

Ray :: struct #packed {
    position : Vector3,
    direction : Vector3,
};

RayHitInfo :: struct #packed {
    hit : bool,
    distance : _c.float,
    position : Vector3,
    normal : Vector3,
};

Wave :: struct #packed {
    sample_count : _c.uint,
    sample_rate : _c.uint,
    sample_size : _c.uint,
    channels : _c.uint,
    data : rawptr,
};

Sound :: struct #packed {
    audio_buffer : rawptr,
    source : _c.uint,
    buffer : _c.uint,
    format : _c.int,
};

MusicData :: struct #packed {};

AudioStream :: struct #packed {
    sample_rate : _c.uint,
    sample_size : _c.uint,
    channels : _c.uint,
    audio_buffer : rawptr,
    format : _c.int,
    source : _c.uint,
    buffers : [2]_c.uint,
};

VrDeviceInfo :: struct #packed {
    h_resolution : _c.int,
    v_resolution : _c.int,
    h_screen_size : _c.float,
    v_screen_size : _c.float,
    v_screen_center : _c.float,
    eye_to_screen_distance : _c.float,
    lens_separation_distance : _c.float,
    interpupillary_distance : _c.float,
    lens_distortion_values : [4]_c.float,
    chroma_ab_correction : [4]_c.float,
};

VrStereoConfig :: struct #packed {
    stereo_fbo : RenderTexture2D,
    distortion_shader : Shader,
    eyes_projection : [2]Matrix,
    eyes_view_offset : [2]Matrix,
    eye_viewport_right : [4]_c.int,
    eye_viewport_left : [4]_c.int,
};

@(default_calling_convention="c")
foreign raylib {

    @(link_name="InitWindow")
    init_window :: proc(
        width : _c.int,
        height : _c.int,
        title : cstring
    ) ---;

    @(link_name="WindowShouldClose")
    window_should_close :: proc() -> bool ---;

    @(link_name="CloseWindow")
    close_window :: proc() ---;

    @(link_name="IsWindowReady")
    is_window_ready :: proc() -> bool ---;

    @(link_name="IsWindowMinimized")
    is_window_minimized :: proc() -> bool ---;

    @(link_name="IsWindowResized")
    is_window_resized :: proc() -> bool ---;

    @(link_name="IsWindowHidden")
    is_window_hidden :: proc() -> bool ---;

    @(link_name="ToggleFullscreen")
    toggle_fullscreen :: proc() ---;

    @(link_name="UnhideWindow")
    unhide_window :: proc() ---;

    @(link_name="HideWindow")
    hide_window :: proc() ---;

    @(link_name="SetWindowIcon")
    set_window_icon :: proc(image : Image) ---;

    @(link_name="SetWindowTitle")
    set_window_title :: proc(title : cstring) ---;

    @(link_name="SetWindowPosition")
    set_window_position :: proc(
        x : _c.int,
        y : _c.int
    ) ---;

    @(link_name="SetWindowMonitor")
    set_window_monitor :: proc(monitor : _c.int) ---;

    @(link_name="SetWindowMinSize")
    set_window_min_size :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="SetWindowSize")
    set_window_size :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="GetWindowHandle")
    get_window_handle :: proc() -> rawptr ---;

    @(link_name="GetScreenWidth")
    get_screen_width :: proc() -> _c.int ---;

    @(link_name="GetScreenHeight")
    get_screen_height :: proc() -> _c.int ---;

    @(link_name="GetMonitorCount")
    get_monitor_count :: proc() -> _c.int ---;

    @(link_name="GetMonitorWidth")
    get_monitor_width :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorHeight")
    get_monitor_height :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalWidth")
    get_monitor_physical_width :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalHeight")
    get_monitor_physical_height :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorName")
    get_monitor_name :: proc(monitor : _c.int) -> cstring ---;

    @(link_name="GetClipboardText")
    get_clipboard_text :: proc() -> cstring ---;

    @(link_name="SetClipboardText")
    set_clipboard_text :: proc(text : cstring) ---;

    @(link_name="IsCursorHidden")
    is_cursor_hidden :: proc() -> bool ---;

    @(link_name="EnableCursor")
    enable_cursor :: proc() ---;

    @(link_name="DisableCursor")
    disable_cursor :: proc() ---;

    @(link_name="ClearBackground")
    clear_background :: proc(color : Color) ---;

    @(link_name="BeginDrawing")
    begin_drawing :: proc() ---;

    @(link_name="EndDrawing")
    end_drawing :: proc() ---;

    @(link_name="BeginMode2D")
    begin_mode2_d :: proc(camera : Camera2D) ---;

    @(link_name="EndMode2D")
    end_mode2_d :: proc() ---;

    @(link_name="BeginMode3D")
    begin_mode3_d :: proc(camera : Camera3D) ---;

    @(link_name="EndMode3D")
    end_mode3_d :: proc() ---;

    @(link_name="BeginTextureMode")
    begin_texture_mode :: proc(target : RenderTexture2D) ---;

    @(link_name="EndTextureMode")
    end_texture_mode :: proc() ---;

    @(link_name="GetMouseRay")
    get_mouse_ray :: proc(
        mouse_position : Vector2,
        camera : Camera
    ) -> Ray ---;

    @(link_name="GetWorldToScreen")
    get_world_to_screen :: proc(
        position : Vector3,
        camera : Camera
    ) -> Vector2 ---;

    @(link_name="GetCameraMatrix")
    get_camera_matrix :: proc(camera : Camera) -> Matrix ---;

    @(link_name="SetTargetFPS")
    set_target_fps :: proc(fps : _c.int) ---;

    @(link_name="GetFPS")
    get_fps :: proc() -> _c.int ---;

    @(link_name="GetFrameTime")
    get_frame_time :: proc() -> _c.float ---;

    @(link_name="GetTime")
    get_time :: proc() -> _c.double ---;

    @(link_name="ColorToInt")
    color_to_int :: proc(color : Color) -> _c.int ---;

    @(link_name="ColorNormalize")
    color_normalize :: proc(color : Color) -> Vector4 ---;

    @(link_name="ColorToHSV")
    color_to_hsv :: proc(color : Color) -> Vector3 ---;

    @(link_name="ColorFromHSV")
    color_from_hsv :: proc(hsv : Vector3) -> Color ---;

    @(link_name="GetColor")
    get_color :: proc(hex_value : _c.int) -> Color ---;

    @(link_name="Fade")
    fade :: proc(
        color : Color,
        alpha : _c.float
    ) -> Color ---;

    @(link_name="SetConfigFlags")
    set_config_flags :: proc(flags : _c.uchar) ---;

    @(link_name="SetTraceLogLevel")
    set_trace_log_level :: proc(log_type : _c.int) ---;

    @(link_name="SetTraceLogExit")
    set_trace_log_exit :: proc(log_type : _c.int) ---;

    @(link_name="SetTraceLogCallback")
    set_trace_log_callback :: proc(callback : TraceLogCallback) ---;

    @(link_name="TraceLog")
    trace_log :: proc(
        log_type : _c.int,
        text : cstring
    ) ---;

    @(link_name="TakeScreenshot")
    take_screenshot :: proc(file_name : cstring) ---;

    @(link_name="GetRandomValue")
    get_random_value :: proc(
        min : _c.int,
        max : _c.int
    ) -> _c.int ---;

    @(link_name="FileExists")
    file_exists :: proc(file_name : cstring) -> bool ---;

    @(link_name="IsFileExtension")
    is_file_extension :: proc(
        file_name : cstring,
        ext : cstring
    ) -> bool ---;

    @(link_name="GetExtension")
    get_extension :: proc(file_name : cstring) -> cstring ---;

    @(link_name="GetFileName")
    get_file_name :: proc(file_path : cstring) -> cstring ---;

    @(link_name="GetFileNameWithoutExt")
    get_file_name_without_ext :: proc(file_path : cstring) -> cstring ---;

    @(link_name="GetDirectoryPath")
    get_directory_path :: proc(file_name : cstring) -> cstring ---;

    @(link_name="GetWorkingDirectory")
    get_working_directory :: proc() -> cstring ---;

    @(link_name="GetDirectoryFiles")
    get_directory_files :: proc(
        dir_path : cstring,
        count : ^_c.int
    ) -> ^cstring ---;

    @(link_name="ClearDirectoryFiles")
    clear_directory_files :: proc() ---;

    @(link_name="ChangeDirectory")
    change_directory :: proc(dir : cstring) -> bool ---;

    @(link_name="IsFileDropped")
    is_file_dropped :: proc() -> bool ---;

    @(link_name="GetDroppedFiles")
    get_dropped_files :: proc(count : ^_c.int) -> ^cstring ---;

    @(link_name="ClearDroppedFiles")
    clear_dropped_files :: proc() ---;

    @(link_name="GetFileModTime")
    get_file_mod_time :: proc(file_name : cstring) -> _c.long ---;

    @(link_name="StorageSaveValue")
    storage_save_value :: proc(
        position : _c.int,
        value : _c.int
    ) ---;

    @(link_name="StorageLoadValue")
    storage_load_value :: proc(position : _c.int) -> _c.int ---;

    @(link_name="OpenURL")
    open_url :: proc(url : cstring) ---;

    @(link_name="IsKeyPressed")
    is_key_pressed :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyDown")
    is_key_down :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyReleased")
    is_key_released :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyUp")
    is_key_up :: proc(key : _c.int) -> bool ---;

    @(link_name="GetKeyPressed")
    get_key_pressed :: proc() -> _c.int ---;

    @(link_name="SetExitKey")
    set_exit_key :: proc(key : _c.int) ---;

    @(link_name="IsGamepadAvailable")
    is_gamepad_available :: proc(gamepad : _c.int) -> bool ---;

    @(link_name="IsGamepadName")
    is_gamepad_name :: proc(
        gamepad : _c.int,
        name : cstring
    ) -> bool ---;

    @(link_name="GetGamepadName")
    get_gamepad_name :: proc(gamepad : _c.int) -> cstring ---;

    @(link_name="IsGamepadButtonPressed")
    is_gamepad_button_pressed :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonDown")
    is_gamepad_button_down :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonReleased")
    is_gamepad_button_released :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonUp")
    is_gamepad_button_up :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="GetGamepadButtonPressed")
    get_gamepad_button_pressed :: proc() -> _c.int ---;

    @(link_name="GetGamepadAxisCount")
    get_gamepad_axis_count :: proc(gamepad : _c.int) -> _c.int ---;

    @(link_name="GetGamepadAxisMovement")
    get_gamepad_axis_movement :: proc(
        gamepad : _c.int,
        axis : _c.int
    ) -> _c.float ---;

    @(link_name="IsMouseButtonPressed")
    is_mouse_button_pressed :: proc(button : _c.int) -> bool ---;

    @(link_name="IsMouseButtonDown")
    is_mouse_button_down :: proc(button : _c.int) -> bool ---;

    @(link_name="IsMouseButtonReleased")
    is_mouse_button_released :: proc(button : _c.int) -> bool ---;
